# snackstock

./: .gitignore  AGENTS.md  README.md  SnackStock.spec  build_windows.bat  config.py  main.py  pyproject.toml
database/: schema.sql
docs/: 使用说明.md  发布流程.md  员工快速上手.md  工程目录结构.md  系统文档.md
hooks/: pyi_rth_pyqt6_path.py
src/: db_manager.py  scanner_handler.py
src/gui/: main_window.py
src/logic/: inbound.py  outbound.py  report.py
