[project]
name = "snackstock"
version = "0.1.0"
description = "SnackStock desktop inventory management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.7.1",
]

[tool.uv]
index = [
    { url = "https://mirrors.aliyun.com/pypi/simple/", default = true }
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pyinstaller-hooks-contrib>=2026.0",
]
